tests/compiler/isLiteral1/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.8.2/tests/cases/compiler/isLiteral1.ts`, Apache-2.0 License

var x: number = 02343;
//~^ ERROR: Octal literals are not allowed.